--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -69,3 +69,45 @@ div.tab button.active {
   display: block;
 }
 /** CSS for Menu end **/
+
+
+
+/** CSS for top Menu **/
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+/* Style the buttons inside the tab */
+.topnav button {
+  display: block;
+  background-color: inherit;
+  color: inherit;
+  padding: 5px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+}
+/** CSS for top menu end **/
