--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -93,21 +93,34 @@ div.tab button.active {
   background-color: #ddd;
   color: black;
 }
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
+
 /* Style the buttons inside the tab */
-.topnav button {
-  display: block;
-  background-color: inherit;
-  color: inherit;
-  padding: 5px 16px;
-  width: 100%;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  transition: 0.3s;
-}
 /** CSS for top menu end **/
+
+.topnav md-content {
+  background-color: transparent !important;
+}
+
+/*fond du menu*/
+.topnav  md-tabs-wrapper{
+  background-color: #555 !important;
+}
+
+/*texte du menu*/
+.topnav .md-tab {
+  color: #f2f2f2 !important;
+  background-color: inherit !important;
+  font-size: 17px;
+  cursor: pointer !important;
+}
+
+/*fond du contenu*/
+.topnav md-tab-content, md-tab-content-wrapper, .ng-scope, .ng-isolate-scope{
+  background-color: transparent !important;
+}
+.topnav md-ink-bar {
+  color: blue !important;
+  background-color: blue !important;
+  height: 4px;
+}
+
