modify css to adapt to screen width

--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -31,7 +31,8 @@ div.tab {
   border: 1px solid #ccc;
   background-color: #f1f1f1;
   width: 15%;
-  min-height: 300px;
+  min-height: 400px;
+  box-sizing: border-box;
 }
 
 /* Style the buttons inside the tab */
@@ -61,11 +62,13 @@ div.tab button.active {
 /* Style the tab content */
 .tabcontent {
   float: left;
-  padding: 0px 12px;
+  padding: 10px;
   border: 1px solid #ccc;
-  width: 80%;
+  width: 85%;
+  box-sizing: border-box;
   border-left: none;
-  min-height: 300px;
+  min-height: 400px;
+  height : auto;
   display: block;
 }
 /** CSS for Menu end **/
