--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -141,6 +141,11 @@ div.tab button.active {
   min-width: 200px;
 }
 
+.tabcontent td {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .inputCom{
   min-height: inherit;
   max-height: 27px;
