--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -146,6 +146,7 @@ div.tab button.active {
   border-color: black;
   border-width: 1px;
   border-style: solid;
+  text-align: center;
 }
 
 .framedTable {
