--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -70,6 +70,11 @@ div.tab button.active {
   background-color: #ccc;
 }
 
+div.tab button:disabled {
+	color: lightgrey;
+  	background-color: #f1f1f1 !important;
+}
+
 /* Style the tab content */
 .tabcontent {
   padding: 10px;
@@ -273,5 +278,75 @@ div.tab button.active {
 }
 
 /**end of reduce or expand menu button**/
+
+/**CSS for login**/
+
+.loginForm div {
+	margin-right: 20px;
+	float: left;
+}
+
+@media screen and (max-width: 1250px) {
+
+	.loginForm {
+		display: none;
+	}
+
+}
+
+@media screen and (min-width: 1250px) {
+
+	.loginForm {
+		display: block;
+		position: absolute;
+		margin: 0;
+		padding: 0;
+		right: 25px;
+		top: 10px;
+	}
+
+	.loginForm label {
+		display: block;
+		width: 140px;
+		padding-right: 5px;
+		float: left;
+		color: #F2F2F2;
+	}
+
+	.loginForm input , .loginForm button{
+		max-width: 75px;
+	}
+
+}
+
+/**end of CSS for login**/
+
+/**CSS for loadOverlay**/
+
+#overlayLoad {
+
+	background-color: rgba(200, 200, 200, 0.5);
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	z-index: 2500;
+	width: 100%;
+	height: 100%;
+}
+
+#selectorConfig {
+
+	margin-left: 40%;
+	margin-top: 100px;
+	padding: 0;
+	width: 20%;
+	height: 20%;
+	background-color: #FFFFFFFF;
+
+}
+
+/**end of CSS for load overlay **/
+
 
 
