--- a/projects/resources/outServer/timetables/server/server_stylesheet.css
+++ b/projects/resources/outServer/timetables/server/server_stylesheet.css
@@ -1,11 +1,11 @@
 ﻿@charset "UTF-8";
 
-/* CSS Stylesheet of server.fet
-   Stylesheet generated with FET 5.31.4 on 5/1/17 11:18 AM */
+/* Feuille de styles CSS de server.fet
+   Feuille de styles générée avec FET 5.31.4 le 01/05/2017 19:47 */
 
-/* To do a page-break only after every second timetable, delete "page-break-before: always;" in "table.even_table". */
-/* Delete "page-break-before: always;" in "table.even_table" and in "table.odd_table" to skip page-breaks. */
-/* To hide an element just write the following phrase into the element: "display:none;" (without quotes). */
+/* Pour faire un saut de page uniquement après chaque second planning, supprimer "page-break-before: always;" dans "table.even_table". */
+/* Supprimer "page-break-before: always;" dans "table.even_table" et dans "table.odd_table" pour passer les sauts de page. */
+/* Pour masquer un élément, écrivez simplement la phrase suivante sous l'élément : "display:none;" (sans guillemet). */
 
 p.back {
   margin-top: 4ex;
@@ -41,7 +41,7 @@ thead {
 
 }
 
-/* Some programs import "tfoot" incorrectly. So we use "tr.foot" instead of "tfoot". */
+/* Certains programmes importent incorrectement "tfoot". Donc nous utilisons "tr.foot" au lieu de "tfoot". */
 
 tr.foot {
 
@@ -73,11 +73,11 @@ th.yAxis {
   height: 8ex;
 }
 
-/* Style the teachers' free periods */
+/* Mettre en forme les périodes libres des enseignants */
 
 div.DESCRIPTION {
   text-align: left;
   font-size: smaller;
 }
 
-/* End of file. */
+/* Fin de fichier. */
