--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -325,7 +325,7 @@ div.tab button:disabled {
 
 #overlayLoad {
 
-	background-color: rgba(200, 200, 200, 0.5);
+	background-color: rgba(170, 170, 220, 0.7);
 	display: none;
 	position: absolute;
 	left: 0;
@@ -337,13 +337,47 @@ div.tab button:disabled {
 
 #selectorConfig {
 
-	margin-left: 40%;
-	margin-top: 100px;
 	padding: 0;
-	width: 20%;
-	height: 20%;
+	margin: 5px;
+	min-height: 20%;
 	background-color: #FFFFFFFF;
+	border: 1px solid black;
 
+}
+
+#overlayLoad fieldset {
+	margin-left: 35%;
+	margin-right: 35%;
+	margin-top: 100px;
+	padding-left: 10px;
+	border: 1px solid black;
+	background-color: rgba(170, 170, 220, 1);
+}
+
+.configValidateButton {
+	margin: 5px;
+	margin-left: 70%;
+	margin-bottom: 2%;
+}
+
+.configButton {
+	width: 100%;
+	display: block;
+	border: none;
+	border-bottom: 1px solid black;
+	margin: 0;
+	padding-left: 5px;
+	padding-right: 5px;
+	outline: none;
+}
+
+.configButton:hover {
+	background-color: #DDDDE8;
+}
+
+.configButton[selected="selected"] {
+	
+    background-color: #ccc;
 }
 
 /**end of CSS for load overlay **/
