--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -286,36 +286,43 @@ div.tab button:disabled {
 	float: left;
 }
 
-@media screen and (max-width: 1250px) {
-
-	.loginForm {
-		display: none;
-	}
-
+@media screen and (max-width: 1050px) {
+    .loginForm {
+        display: none!important;
+    }
 }
 
-@media screen and (min-width: 1250px) {
+@media screen and (max-width: 1350px) {
+    .loginForm label {
+        display: none!important;
+    }
+}
 
-	.loginForm {
-		display: block;
-		position: absolute;
-		margin: 0;
-		padding: 0;
-		right: 25px;
-		top: 10px;
-	}
+.loginForm {
+    display: block;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    right: 25px;
+    top: 10px;
+}
 
-	.loginForm label {
-		display: block;
-		width: 140px;
-		padding-right: 5px;
-		float: left;
-		color: #F2F2F2;
-	}
+.loginForm label {
+    display: block;
+    width: 140px;
+    padding-right: 5px;
+    float: left;
+    color: #F2F2F2;
+}
 
-	.loginForm input , .loginForm button{
-		max-width: 75px;
-	}
+.loginForm input , .loginForm button{
+    max-width: 75px;
+}
+
+
+@media screen and (min-width: 1350px) {
+
+
 
 }
 
