--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -101,6 +101,11 @@ div.tab button:disabled {
   list-style-type:none;
 }
 
+input[readonly] {
+    border: none;
+    background-color: inherit;
+}
+
 /** CSS for Menu end **/
 
 
