--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -178,6 +178,10 @@ input[readonly] {
   margin: 25px;
 }
 
+.unframedTable td, .unframedTable th {
+  border: none !important;
+}
+
 .selectionTable{
   width: 100%;
 }
@@ -215,19 +219,21 @@ input[readonly] {
   top: 0px;
   padding: 0 0 0 0;
   background-color: rgb(0,0,0); /* Black fallback color */
-  background-color: rgba(0,0,60, 0.9); /* Black w/opacity */
-  overflow-x: hidden; /* Disable horizontal scroll */
+  background-color: rgba(177, 202, 227, 0.7); /* Black w/opacity */
+  overflow: hidden;
   transition: 0.5s;
 }
 
-.overlay input {
+.overlay * {
   color: black;
 }
 
 .formLayout {
-  margin-left: 30%;
+  margin-left: 5%;
   margin-top: 30px;
-  padding: 10px;
+  padding: 15px;
+  border: 3px solid black;
+  background-color: #F1F1F1 !important;
 }
 
 .formLayout *{
