--- a/projects/IHM/app/app.css
+++ b/projects/IHM/app/app.css
@@ -327,6 +327,7 @@ input[readonly] {
 
 .loginForm input , .loginForm button{
     max-width: 75px;
+    background-color: #F1F1F1!important;
 }
 
 
